# vincent

./: .gitignore  CMakeLists.txt  ChangeUserNameDlg.cpp  ChangeUserNameDlg.h  DgramSocket.cpp  LICENSE  LogFile.cpp  LogFile.h  MakeHelp.bat  README.md  ReadMe.txt  StdAfx.cpp  Vincent.INI  Vincent.aps  Vincent.clw  Vincent.cpp  Vincent.dsp  Vincent.dsw  Vincent.h  Vincent.ncb  Vincent.opt  Vincent.plg  Vincent.rc  Vincent.sln  Vincent.vcxproj  VincentDlg.cpp  VincentDlg.h  resource.h  trayicon.cpp
hlp/: AfxDlg.rtf  VINCENT.HLP  Vincent.cnt  Vincent.hm  Vincent.hpj
include/: DgramSocket.h  StdAfx.h  pch.h  resource.h  trayicon.h
res/: Vincent.rc2
src/: ChangeUserNameDlg.cpp  DgramSocket.cpp  LogFile.cpp  StdAfx.cpp  Vincent.cpp  VincentDlg.cpp  trayicon.cpp
